added to feature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <body>
   <p>GitHub repository, version control</p>
   <p>Testing git commit</p>
-  ul
+
+  <h1>Food i like to eat</h1>
+
+    <ul>
+      <li>pizza</li>
+      <li>pasta</li>
+      <li>salad</li>
+    </ul>
+
   </body>
 </html>
